# metodi_numerici_fem_2D

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  EllipticProblem.cpp  EllipticProblem.hpp
